# learn-claude-code-rust

./: .env  CLAUDE.md  Cargo.toml  README.md  SYLLABUS.md  test.txt
.tasks/: 1.md  2.md  3.md  task_1.json  task_2.json  task_3.json  task_4.json  task_5.json  task_6.json
.team/: config.json
.team/inbox/: alice.jsonl  bob.jsonl
.worktrees/: events.jsonl  index.json
agents/: s01_agent_loop.rs  s02_tool_use.rs  s03_todo_write.rs  s04_subagent.rs  s05_skill_loading.rs  s06_context_compact.rs  s07_permission_system.rs  s07_task_system.rs  s08_background_tasks.rs  s09_agent_teams.rs  s10_team_protocols.rs  s11_autonomous_agents.rs  s12_worktree_task_isolation.rs
docs/: s01-the-agent-loop.md  s02-tool-use.md  s02a-tool-control-plane.md  s02b-tool-execution-runtime.md  s03-todo-write.md  s04-subagent.md  s05-skill-loading.md  s06-context-compact.md  s07-task-system.md  s08-background-tasks.md  s09-agent-teams.md  s10-team-protocols.md  s11-autonomous-agents.md  s12-worktree-task-isolation.md
lessons/: SYLLABUS.md
lessons/day01/: README.md  REVIEW.md
lessons/day02/: README.md  REVIEW.md
lessons/day03/: README.md  REVIEW.md
lessons/day04/: README.md  REVIEW.md
lessons/day05/: README.md  REVIEW.md
lessons/day06/: README.md  REVIEW.md
lessons/day07/: README.md  REVIEW.md
lessons/day08/: README.md  REVIEW.md
lessons/day09/: README.md  REVIEW.md
lessons/day10/: README.md  REVIEW.md
lessons/day11/: README.md  REVIEW.md
lessons/day12/: README.md  REVIEW.md
