[package]
name = "learn-claude-code-rust"
version = "0.1.0"
edition = "2024"

# 1. 定义二进制入口 (Binary Definition)
[[bin]]
# 因为 s01_agent_loop.rs 不在 src/ 目录下，必须手动告诉 Cargo 哪里可以找到它
name = "s01"
path = "agents/s01_agent_loop.rs"

[[bin]]
name = "s02"
path = "agents/s02_tool_use.rs"

[[bin]]
name = "s03"
path = "agents/s03_todo_write.rs"

[[bin]]
name = "s04"
path = "agents/s04_subagent.rs"

[[bin]]
name = "s05"
path = "agents/s05_skill_loading.rs"

[[bin]]
name = "s06"
path = "agents/s06_context_compact.rs"

[[bin]]
name = "s07"
path = "agents/s07_task_system.rs"

[[bin]]
name = "s08"
path = "agents/s08_background_tasks.rs"

[[bin]]
name = "s09"
path = "agents/s09_agent_teams.rs"

# 2. 项目依赖 (Dependencies)
[dependencies]
# 异步运行时，提供 #[tokio::main] 和异步执行环境
tokio = { version = "1", features = ["full"] }
# 网络请求库，用于调用 LLM API
reqwest = { version = "0.11", features = ["json"] }
# JSON 序列化/反序列化工具，提供 json! 宏
serde_json = "1.0"
# 加载 .env 环境变量文件
dotenv = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
wait-timeout = "0.2"
thiserror = "2.0"
walkdir = "2.5"
fs2 = "0.4.3"
